- обновил описание в контроллере и соответствующую схему open api
