# api-docs.yaml
@@ -10,6 +10,8 @@ paths:
     post:
       tags:
       - method-execution-controller
+      summary: Save method execution data
+      description: Save method execution data
       operationId: save
       requestBody:
         content:
@@ -19,18 +21,71 @@ paths:
         required: true
       responses:
         "201":
-          description: Created
+          description: Method execution data saved successfully
           content:
-            '*/*':
+            application/json:
               schema:
                 $ref: '#/components/schemas/MethodExecution'
+        "400":
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /v1/metrics/class/{className}:
+    get:
+      tags:
+      - method-execution-controller
+      summary: Get aggregate execution data by class name
+      description: "Get aggregate execution data (total, average, min, max) for all\
+        \ methods of a specified class within a given time range"
+      operationId: getExecutionsByClassName
+      parameters:
+      - name: className
+        in: path
+        description: Name of the class
+        required: true
+        schema:
+          type: string
+      - name: startDate
+        in: query
+        description: Start date for filtering (inclusive)
+        required: false
+        schema:
+          type: string
+          format: date-time
+      - name: endDate
+        in: query
+        description: End date for filtering (inclusive)
+        required: false
+        schema:
+          type: string
+          format: date-time
+      - name: aggregateType
+        in: query
+        description: Type of aggregation (default = average)
+        required: false
+        schema:
+          type: string
+          enum:
+          - total
+          - average
+          - max
+          - min
+      responses:
+        "200":
+          description: Aggregate execution data retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseMethodExecutionDto'
   /v1/metrics/class/{className}/method/{methodName}:
     get:
       tags:
       - method-execution-controller
       summary: Get aggregate execution data by class and method name
-      description: "Get aggregate execution data (average, min, max) for a specified\
-        \ method of a specified class within a given time range"
+      description: "Get aggregate execution data (total, average, min, max) for a\
+        \ specified method of a specified class within a given time range"
       operationId: getExecutionsByClassNameAndMethodName
       parameters:
       - name: className
@@ -61,8 +116,8 @@ paths:
           format: date-time
       - name: aggregateType
         in: query
-        description: Type of aggregation
-        required: true
+        description: Type of aggregation (default = average)
+        required: false
         schema:
           type: string
           enum:
@@ -74,23 +129,104 @@ paths:
         "200":
           description: Aggregate execution data retrieved successfully
           content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/ResponseMethodExecutionDto'
-        "404":
-          description: Invalid request or data not found
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/ResponseMethodExecutionDto'
-        "500":
-          description: Internal server error
-          content:
-            '*/*':
+            application/json:
               schema:
                 $ref: '#/components/schemas/ResponseMethodExecutionDto'
 components:
   schemas:
+    ErrorResponse:
+      type: object
+      properties:
+        status:
+          type: string
+          enum:
+          - 100 CONTINUE
+          - 101 SWITCHING_PROTOCOLS
+          - 102 PROCESSING
+          - 103 EARLY_HINTS
+          - 103 CHECKPOINT
+          - 200 OK
+          - 201 CREATED
+          - 202 ACCEPTED
+          - 203 NON_AUTHORITATIVE_INFORMATION
+          - 204 NO_CONTENT
+          - 205 RESET_CONTENT
+          - 206 PARTIAL_CONTENT
+          - 207 MULTI_STATUS
+          - 208 ALREADY_REPORTED
+          - 226 IM_USED
+          - 300 MULTIPLE_CHOICES
+          - 301 MOVED_PERMANENTLY
+          - 302 FOUND
+          - 302 MOVED_TEMPORARILY
+          - 303 SEE_OTHER
+          - 304 NOT_MODIFIED
+          - 305 USE_PROXY
+          - 307 TEMPORARY_REDIRECT
+          - 308 PERMANENT_REDIRECT
+          - 400 BAD_REQUEST
+          - 401 UNAUTHORIZED
+          - 402 PAYMENT_REQUIRED
+          - 403 FORBIDDEN
+          - 404 NOT_FOUND
+          - 405 METHOD_NOT_ALLOWED
+          - 406 NOT_ACCEPTABLE
+          - 407 PROXY_AUTHENTICATION_REQUIRED
+          - 408 REQUEST_TIMEOUT
+          - 409 CONFLICT
+          - 410 GONE
+          - 411 LENGTH_REQUIRED
+          - 412 PRECONDITION_FAILED
+          - 413 PAYLOAD_TOO_LARGE
+          - 413 REQUEST_ENTITY_TOO_LARGE
+          - 414 URI_TOO_LONG
+          - 414 REQUEST_URI_TOO_LONG
+          - 415 UNSUPPORTED_MEDIA_TYPE
+          - 416 REQUESTED_RANGE_NOT_SATISFIABLE
+          - 417 EXPECTATION_FAILED
+          - 418 I_AM_A_TEAPOT
+          - 419 INSUFFICIENT_SPACE_ON_RESOURCE
+          - 420 METHOD_FAILURE
+          - 421 DESTINATION_LOCKED
+          - 422 UNPROCESSABLE_ENTITY
+          - 423 LOCKED
+          - 424 FAILED_DEPENDENCY
+          - 425 TOO_EARLY
+          - 426 UPGRADE_REQUIRED
+          - 428 PRECONDITION_REQUIRED
+          - 429 TOO_MANY_REQUESTS
+          - 431 REQUEST_HEADER_FIELDS_TOO_LARGE
+          - 451 UNAVAILABLE_FOR_LEGAL_REASONS
+          - 500 INTERNAL_SERVER_ERROR
+          - 501 NOT_IMPLEMENTED
+          - 502 BAD_GATEWAY
+          - 503 SERVICE_UNAVAILABLE
+          - 504 GATEWAY_TIMEOUT
+          - 505 HTTP_VERSION_NOT_SUPPORTED
+          - 506 VARIANT_ALSO_NEGOTIATES
+          - 507 INSUFFICIENT_STORAGE
+          - 508 LOOP_DETECTED
+          - 509 BANDWIDTH_LIMIT_EXCEEDED
+          - 510 NOT_EXTENDED
+          - 511 NETWORK_AUTHENTICATION_REQUIRED
+        message:
+          type: string
+    MethodExecution:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        className:
+          type: string
+        methodName:
+          type: string
+        executionTime:
+          type: integer
+          format: int64
+        executionTimestamp:
+          type: string
+          format: date-time
     AddMethodExecutionDto:
       required:
       - className
@@ -113,22 +249,7 @@ components:
         executionTimestamp:
           type: string
           format: date-time
-    MethodExecution:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        className:
-          type: string
-        methodName:
-          type: string
-        executionTime:
-          type: integer
-          format: int64
-        executionTimestamp:
-          type: string
-          format: date-time
+      description: Data for adding method execution
     ResponseMethodExecutionDto:
       type: object
       properties:
